Estrutura básica HTML

--- a/site.html
+++ b/site.html
@@ -1,4 +1,30 @@
-<h1>Bem Vindo</h1>
-<h2>Blumenau</h2>
-<p>Vá para o site da <a href="https://www.eliti.com.br/">Eliti</a>.</p>
-<img src="erison.jpg" alt="foto de um cara bonito">
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Meu site</title>
+  <style>
+    body {
+      color: orange;
+    }
+
+    a {
+      color: white;
+      background: green;
+      padding: 10px;
+      text-decoration: none;
+      text-transform: uppercase;
+      font-family: Arial;
+      border-radius: 5px;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Bem Vindo</h1>
+  <h2>Blumenau</h2>
+  <p>Vá para o site da <a href="https://www.eliti.com.br/">Eliti</a>.</p>
+  <img src="erison.jpg" alt="foto de um cara bonito">
+</body>
+
+</html>
