Botão com ícone de folha suspeita

--- a/site.html
+++ b/site.html
@@ -18,13 +18,19 @@
       font-family: Arial;
       border-radius: 5px;
     }
+
+    a:hover {
+      background: lightgreen;
+      color: green;
+    }
   </style>
 </head>
 
 <body>
+
   <h1>Bem Vindo</h1>
   <h2>Blumenau</h2>
-  <p>Vá para o site da <a href="https://www.eliti.com.br/">Eliti</a>.</p>
+  <p>Vá para o site da <a href="https://www.eliti.com.br/"><i class="fab fa-canadian-maple-leaf"></i> Eliti</a>.</p>
   <img src="erison.jpg" alt="foto de um cara bonito">
 </body>
 
