--- a/site.html
+++ b/site.html
@@ -23,6 +23,14 @@
       background: lightgreen;
       color: green;
     }
+
+    a.preto {
+      background: black;
+    }
+
+    a.violeta {
+      background: violet;
+    }
   </style>
 </head>
 
@@ -30,7 +38,9 @@
 
   <h1>Bem Vindo</h1>
   <h2>Blumenau</h2>
-  <p>Vá para o site da <a href="https://www.eliti.com.br/"><i class="fab fa-canadian-maple-leaf"></i> Eliti</a>.</p>
+  <p>Vá para o site da <a href="https://www.eliti.com.br/"><i class="fas fa-user-graduate"></i> Eliti</a>.</p>
+  <p>Vá para o site da <a class="preto" href="http://epanel.com.br/"><i class="fas fa-code"></i> Epanel</a>.</p>
+  <p>Vá para o site do <a class="violeta" href="https://cashimbo.com.br/"><i class="fas fa-money-bill-alt"></i> Cashimbo</a>.</p>
   <img src="erison.jpg" alt="foto de um cara bonito">
 </body>
 
