--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
 
     a.violeta {
-      background: violet;
+      background: blue;
     }
 
     p {
@@ -38,7 +38,7 @@
 
     img {
       /* display: none; */
-      width: 100%;
+      width: 20%;
     }
   </style>
 </head>
@@ -50,7 +50,7 @@
   <p>Vá para o site da <a href="https://www.eliti.com.br/"><i class="fas fa-user-graduate"></i> Eliti</a>.</p>
   <p>Vá para o site da <a class="preto" href="http://epanel.com.br/"><i class="fas fa-code"></i> Epanel</a>.</p>
   <p>Vá para o site do <a class="violeta" href="https://cashimbo.com.br/"><i class="fas fa-money-bill-alt"></i> Cashimbo</a>.</p>
-  <img src="erison.jpg" alt="foto de um cara bonito">
+  <img src="aviao.jpg" alt="foto de um avião em solo.">
 </body>
 
 </html>
